// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`automatically dispatch action object returned from thunk: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`automatically dispatch action object returned from thunk: 1 - history_index 1`] = `1`;

exports[`automatically dispatch action object returned from thunk: 1 - response 1`] = `
Object {
  "type": "FOO",
}
`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - SECOND - onComplete 1`] = `1`;

exports[`automatically dispatch action object returned from thunk: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`automatically dispatch action object returned from thunk: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second",
  },
  "title": "FOO",
}
`;

exports[`automatically dispatch action object returned from thunk: 1 - title 1`] = `"SECOND"`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - history_index 1`] = `1`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - response 1`] = `
Object {
  "payload": "payload",
  "type": "SECOND_COMPLETE",
}
`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - routes - SECOND - onComplete 1`] = `1`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second",
  },
  "title": "SECOND_COMPLETE - \\"payload\\"",
}
`;

exports[`create action /w payload + set type to currentActionType + _COMPLETE: 1 - title 1`] = `"SECOND"`;
